Update heading with emoji

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>Delicious Bites Menu</title>
 </head>
 <body>
-  <h1>Delicious Bites Restaurant</h1>
+  <h1><h1>Welcome to Delicious Bites Restaurant 🍔🍕</h1>
+
 
   <h2>Appetizers</h2>
   <ul>
